Details: - Added controller file to Routines - Added swagger documetation to Routines
