# app/config/swaggerApi.json
@@ -5,7 +5,7 @@
         "description": "API Documentation for developers",
         "version": "1.0.1",
         "contact": {
-            "name": "Julio Nuñez Quesada",
+            "name": "Softech Development Department",
             "url": "http://juhunuque.github.io/",
             "email": "juhunuque@gmail.com"
         }
@@ -404,6 +404,203 @@
                     }
                 }
             }
+        },
+        "/v1/routines": {
+            "get": {
+                "tags": [
+                    "routine"
+                ],
+                "summary": "Get all Routines",
+                "operationId": "routineGetAll",
+                "description": "Returns all routine objects",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "routine"
+                ],
+                "summary": "Create a new routine",
+                "operationId": "routineCreate",
+                "description": "Create a new routine",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "New routine to be created",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/routines/{id}": {
+            "get": {
+                "tags": [
+                    "routine"
+                ],
+                "summary": "Get a single routine",
+                "operationId": "routineGetById",
+                "description": "Returns single routine object",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of routine to return",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "routine"
+                ],
+                "summary": "Remove routine",
+                "operationId": "routineDelete",
+                "description": "Remove an existing routine",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of routine to remove",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "routine"
+                ],
+                "summary": "Update routine",
+                "operationId": "routineUpdate",
+                "description": "Update an existing routine",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of routine to update",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "New routine to be created",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/Routine"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -450,6 +647,23 @@
                     "type": "integer",
                     "description": "Activity name",
                     "example": "Jump"
+                }
+            }
+        },
+        "Routine": {
+            "type": "object",
+            "required": [
+                "nameRoutine"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "nameRoutine": {
+                    "type": "string",
+                    "description": "Routine name",
+                    "example": "Insanity"
                 }
             }
         }
