# routes/routines.js
@@ -1,9 +1,17 @@
+"use strict";
 var express = require('express');
 var router = express.Router();
+let controller = require('./../app/controllers/routine.controller');
 
-/* GET users listing. */
-router.get('/', function(req, res, next) {
-  res.send('respond with a resource');
-});
+
+router.get('/', controller.getAll);
+
+router.get('/:id', controller.getOneById);
+
+router.post('/', controller.createObject);
+
+router.delete('/:id', controller.removeObject);
+
+router.put('/:id', controller.updateObject);
 
 module.exports = router;
